--- a/february.html
+++ b/february.html
@@ -31,7 +31,7 @@
       </header>
       <section>
       <ul>
-	<li><strong>Weekend of Feb. 7, 6-9pm: Code for DC meetup.</strong> IMPORTANT: if you are looking for training, I maintain that attending meetups like Code for DC is one of the best ways to learn. This is the DC chapter of the Code for America Brigade. We are a group of volunteer civic hackers working together to solve local issues and help people engage with the city. We welcome all tech skill levels. <a href="http://www.meetup.com/code-for-dc" target="_self">RSVP LINK</a></li>
+	<li><strong>Weekend of Feb. 22: Open Data Day</strong> I'll be teaching GitHub 101.</li>
 	<li></li>
 </ul>
       </section>
