--- a/codeofconduct.html
+++ b/codeofconduct.html
@@ -2,15 +2,15 @@
 
 <p>Because there are already excellent codes of conduct for existing events that bring people together to learn and foster community, we'd like to underline their work. </p>
 
-<p>The creators of the 2014 Lean Startup Conference "do not tolerate harassment based on race, gender, religion, age, color, national origin, physical appearance, disability, sexual orientation or gender identity." They go on to give a thorough definition of harassment: </p>
+<p>The creators of the <a href="http://leanstartup.co/code-of-conduct">2014 Lean Startup Conference</a> "do not tolerate harassment based on race, gender, religion, age, color, national origin, physical appearance, disability, sexual orientation or gender identity." They go on to give a thorough definition of harassment: </p>
 
 <p>"When we say 'harassment,' we’re talking about unwelcome or hostile behavior, including speech that intimidates, creates discomfort, or interferes with a person’s participation in the conference (speaker presentations fall under this category and should not use images or examples that would violate the code of conduct); unwelcome physical contact; unwelcome sexual attention; deliberate intimidation; and stalking. Sponsors should not use sexualized images or activities, and sponsor representatives (including volunteers) should not use sexualized clothing/uniforms/costumes."</p>
 
 <p>The TechLady team reserves the right to expel from the hackathon anyone who displays such behavior. </p>
 
-<p>The Hackbright Academy's code chimes in with four simple main guidelines: Be respectful. Be thoughtful. Be open. Be awesome.</p>
+<p>The <a href="http://www.hackbrightacademy.com/code_of_conduct_for_hackathons">Hackbright Academy's</a> code chimes in with four simple main guidelines: Be respectful. Be thoughtful. Be open. Be awesome.</p>
 
-<p>The Allied Media Conference spells out excellent principles for their community. One that feels applicable to the TechLady Hackathon: </p>
+<p>The <a href="http://alliedmedia.org/#!/amp-network-principles">Allied Media Conference</a> spells out excellent principles for their community. One that feels applicable to the TechLady Hackathon: </p>
 
 <p>"The strongest solutions happen through the process, not in a moment at the end of the process."</p>
 
@@ -22,4 +22,4 @@
 
 <p>All of this to say: we want this hackathon to be a safe place to create, learn, and build up a supportive community. Thank you for being a part of it! </p>
 
-<p>P.S. If you're interested in more, the Ada Initiative has a thorough list of conferences with anti-harassment policies.</p>
+<p>P.S. If you're interested in more, the <a href="http://adainitiative.org/what-we-do/conference-policies/">Ada Initiative</a> has a thorough list of conferences with anti-harassment policies.</p>
