--- a/codeofconduct.html
+++ b/codeofconduct.html
@@ -4,7 +4,7 @@
 
 <p>The creators of the <a href="http://leanstartup.co/code-of-conduct">2014 Lean Startup Conference</a> "do not tolerate harassment based on race, gender, religion, age, color, national origin, physical appearance, disability, sexual orientation or gender identity." They go on to give a thorough definition of harassment: </p>
 
-<p>"When we say 'harassment,' we’re talking about unwelcome or hostile behavior, including speech that intimidates, creates discomfort, or interferes with a person’s participation in the conference (speaker presentations fall under this category and should not use images or examples that would violate the code of conduct); unwelcome physical contact; unwelcome sexual attention; deliberate intimidation; and stalking. Sponsors should not use sexualized images or activities, and sponsor representatives (including volunteers) should not use sexualized clothing/uniforms/costumes."</p>
+<p><blockquote>"When we say 'harassment,' we’re talking about unwelcome or hostile behavior, including speech that intimidates, creates discomfort, or interferes with a person’s participation in the conference (speaker presentations fall under this category and should not use images or examples that would violate the code of conduct); unwelcome physical contact; unwelcome sexual attention; deliberate intimidation; and stalking. Sponsors should not use sexualized images or activities, and sponsor representatives (including volunteers) should not use sexualized clothing/uniforms/costumes."</blockquote></p>
 
 <p>The TechLady team reserves the right to expel from the hackathon anyone who displays such behavior. </p>
 
