--- a/codeofconduct.html
+++ b/codeofconduct.html
@@ -12,13 +12,13 @@
 
 <p>The <a href="http://alliedmedia.org/#!/amp-network-principles">Allied Media Conference</a> spells out excellent principles for their community. One that feels applicable to the TechLady Hackathon: </p>
 
-<p>"The strongest solutions happen through the process, not in a moment at the end of the process."</p>
+<p><blockquote>"The strongest solutions happen through the process, not in a moment at the end of the process."</blockquote></p>
 
 <p>In other words, use this time and space to enjoy the process of hacking! Whether it's your first time at a hackathon or your 50th, it's always good to remember not to focus so heavily on the end result that you don't enjoy the process of making it happen. And bear in mind that the process of getting productive at a hackathon can be a bit messy and slow to start.</p>
 
 <p>The "short version" of PyCon's Code of Conduct for 2013 echoes a lot of the same feelings, but it boils down to this: </p>
 
-<p>Be kind to others. Do not insult or put down other attendees. Behave professionally. </p>
+<p><blockquote>"Be kind to others. Do not insult or put down other attendees. Behave professionally."</blockquote></p>
 
 <p>All of this to say: we want this hackathon to be a safe place to create, learn, and build up a supportive community. Thank you for being a part of it! </p>
 
