adding new jekyll headers and donors page

--- a/index.html
+++ b/index.html
@@ -18,10 +18,4 @@ We offer basic 101 intro training and mentoring workshops throughout the day - <
 This is a civic hackathon. In December, we worked on the <a href="http://eiti.org/">Extractive Industry Transparency Initiative</a> Open Data Project, data visualizations for the <a href="http://feedthefuture.gov/article/release-womens-empowerment-agriculture-index">Women's Empowerment in Agriculture Index</a>, Code for DC’s <a href="http://www.ancbrigade.com">ANC Brigade</a>, continuing art games created at The Smithsonian American Art Museum’s recent hackathon, <a href="http://shutthatdown.com/">ShutThatDown.com</a>, Health and Human Services datasets, GIS mapping in conflict zones, and more.</p>
 <h3>Questions? Ideas? Advice?</h3>
 <p>Please feel free to reach out via <a href="mailto:leahbannon@gmail.com">email</a> or <a href="http://twitter.com/leahbannon">Twitter</a> with any questions, ideas, or issues.</p>
-<h3>Donors</h3>
-<p><a href="http://www.irex.org/"><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/irexlogo.jpg?raw=true"/></a></p>
-<p><a href="http://github.com"><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/Octocat.jpg?raw=true"</a></p>
-<p><a href="http://govtrack.us"><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/logo_hires.png?raw=true"/></a></p>
-<p><a href="http://mapbox.com"><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/mapbox-logo-512.png?raw=true"/></a></p>
-<p><a href="http://sunlightfoundation.com/"><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/SunlightFoundation-logo.png?raw=true"/></a></p>
-<p><a href="http://neworganizing.com/"><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/noi_square_logo.jpg?raw=true"/></a></p>
+<h3><a href="/donors">Donors: Support the Tech Lady Hackathon</a></h3>
