--- a/january2013.html
+++ b/january2013.html
@@ -1,35 +1,8 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>TechLady Hackathon + Training Day by leahbannon</title>
+---
+layout:main
+published:true
+---
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>TechLady Hackathon + Training Day</h1>
-        <p>December 7, 2013</p>
-
-        <p class="view"><a href="https://github.com/leahbannon/hackathontrainingday">View the Project on GitHub</a></p>
-        <p class="view">Short link: <a href="http://bit.ly/hacktrain">bit.ly/hacktrain</a> <br/><small>Long link: <a href="http://hackathontrainingday.org">hackathontrainingday.org</a></small></p>
-                
-        <ul>
-         
-          <li><a href="https://github.com/leahbannon/hackathontrainingday/wiki">Discuss on the <strong>Wiki</strong></a></li>
-          <li><a href="https://github.com/leahbannon/hackathontrainingday/issues">Create an issue <strong>GitHub</strong></a></li>
-           <li><a href="https://twitter.com/leahbannon">Tweet at me!<strong>@</strong></a></li>
-        </ul>
-        <p><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/techlady-22830.jpg?raw=true"/></p>
-      </header>
-      <section>
       <ul>
 	<li><strong>Tuesday Jan. 7, 6-9pm: Code for DC meetup.</strong> IMPORTANT: if you are looking for training, I maintain that attending meetups like Code for DC is one of the best ways to learn. This is the DC chapter of the Code for America Brigade. We are a group of volunteer civic hackers working together to solve local issues and help people engage with the city. We welcome all tech skill levels. <a href="http://www.meetup.com/code-for-dc" target="_self">RSVP LINK</a></li>
 	<li><strong>Saturday Jan. 11: DC Internet Freedom Hackathon</strong> Come help make it possible for Syrian citizen reporters, Mexican journalists, and Iranian political activists get their voices heard safely. <a href="http://www.communityred.org/" target="_self">CommunityRED</a>, with <a href="https://openitp.org/" target="_self">OpenITP</a>, is holding a hackathon to make security tools easier&nbsp;to use, so they&nbsp;need tech skills ranging from folks who have a keen eye and can evaluate how easy the site is to use to UX experts to developers who code in a variety of languages. <a href="https://www.eventbrite.com/e/dc-internet-freedom-hackathon-tickets-9306081741" target="_self">RSVP LINK</a></li>
@@ -37,6 +10,3 @@
 	<li><strong>Weekend of Friday Jan 17: PDF Liberation Hackathon</strong>&nbsp;Extracting information from PDFs is a problem. Sunlight Foundation is organizing this hackathon to improve open source tools for PDF extraction. <a href="https://www.eventbrite.com/e/pdf-liberation-hackathon-2014-tickets-9111078481" target="_self">RSVP LINK</a></li>
 	<li><strong>Wednesday Jan. 22, 6-9pm: Code for DC </strong>So nice, I listed it twice. This is our second meetup of the month. No RSVP link yet.</li>
 </ul>
-      </section>
-      </body>
-</html>
