--- a/newsletter.html
+++ b/newsletter.html
@@ -1,15 +1,10 @@
 ---
-layout:main
-published:true
+layout: main
+published: true
 ---
-          <li><a href="https://github.com/leahbannon/hackathontrainingday/wiki">Discuss on the <strong>Wiki</strong></a></li>
-          <li><a href="https://github.com/leahbannon/hackathontrainingday/issues">Create an issue <strong>GitHub</strong></a></li>
-           <li><a href="https://twitter.com/leahbannon">Tweet at me!<strong>@</strong></a></li>
-        </ul>
-        <p><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/techlady-22830.jpg?raw=true"/></p>
-      </header>
-      <section>
-      <!-- Begin MailChimp Signup Form -->
+
+<h3>Newsletter</h3>
+    <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
 
 <div id="mc_embed_signup">
