--- a/index.html
+++ b/index.html
@@ -3,13 +3,9 @@ layout: main
 published: true
 ---
 
-<p><strong>Register now for the next Tech Lady Hackathon + Training Day! It's Saturday, July 26.</strong><a href="http://techladyhackathon2.eventbrite.com">Register here!</a> Everyone who identifies as a woman is welcome.</p>
-
-<p>Join us if you'd like to learn more tech, work on a cool project, or make some tech lady friends in a positive, supportive environment.</p>
+<p><strong>Register now for the next Tech Lady Hackathon + Training Day! It's Saturday, July 26.</strong> <a href="http://techladyhackathon2.eventbrite.com">Register here!</a> Everyone who identifies as a woman is welcome.</p> Join us if you'd like to learn more tech, work on a cool project, or make some tech lady friends in a positive, supportive environment.</p>
 
 <p>The Friday night <strong>pre-party at MapBox</strong> is open to all genders. <a href="http://techladyjuly.splashthat.com/">RSVP for the pre-party here.</a></p>
-
-<p>Sign up for the <a href="/newsletter.html">Tech Lady Hackathon newsletter</a> for updates about awesome tech training, women in tech opportunities, and DC tech events.</p>
 
 <h3>About the Tech Lady Hackathon + Training Day</h3>
 
