--- a/newsletter.html
+++ b/newsletter.html
@@ -9,8 +9,8 @@ published: true
 
 <div id="mc_embed_signup">
 <form action="http://hackathontrainingday.us3.list-manage.com/subscribe/post?u=fa2fbc8ac3f779641e2b044f7&amp;id=0ec18fba83" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-	<h2>TechLady Hackathon + Training Newsletter</h2>
-	<p>Sign up for this newsletter to receive monthly updates about awesome tech training, women in tech opportunities, and DC tech events.</p>
+	<h2>Tech Lady Hackathon + Training Newsletter</h2>
+	<p>An email newsletter about the next Tech Lady Hackathon, women in tech opportunities, DC tech events, awesome tech training, and sometimes me, <a href="http://leah.io">Leah Bannon</a>. Frequency is about 2-3 times per month.</p>
 <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
 <div class="mc-field-group">
 	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
