--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@ layout: main
 published: true
 ---
 
-<h3>The next Tech Lady Hackathon + Training Day is in July. <a href="/newsletter">Subscribe to the newsletter</a> to be the first to hear details (and learn about other DC tech lady events and training every month).</h3>
+<h3>The next Tech Lady Hackathon + Training Day is in July.</h3> 
+<p><a href="/newsletter">Subscribe to the newsletter</a> to be the first to hear details (and learn about other DC tech lady events and training every month).</p>
 
 <p>Coders, tech strategists, trainers, newbies, and ideas are welcome! The goal of these hackathon + training days is for you to contribute to a project you find meaningful, learn new tech, make new friends and connections, and then attend more DC tech meetups/hackathons!</p>
 
