--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@ published: true
 This is a civic hackathon, and we usually work on projects from <a href="http://codefordc.org">Code for DC</a>, but you're welcome to bring anything.</p>
 
 <h3>Questions? Ideas? Advice?</h3>
-<p>Leah Bannon is the lead organizer if this event. Please feel free to reach out via <a href="http://twitter.com/leahbannon">Twitter</a> with any questions or ideas, or you can check out her personal site at <a href="http://leah.io">Leah.io</a>.</p>
+<p>Leah Bannon is the lead organizer of this event. Please feel free to reach out via <a href="http://twitter.com/leahbannon">Twitter</a> with any questions or ideas, or you can check out her personal site at <a href="http://leah.io">Leah.io</a>.</p>
 
 <h3><a href="/donors">Donors: Support the Tech Lady Hackathon</a></h3>
