--- a/index.html
+++ b/index.html
@@ -12,14 +12,11 @@ published: true
 
 <h3>About the Hackathon and Training</h3>
 
-<p><strong>Training:</strong><br>We offer basic 101 intro training and mentoring workshops throughout the day - <strong>no prior knowledge of code is necessary</strong>. And we mean none.</p>
+<p><strong>Training:</strong> We offer basic 101 intro training and mentoring workshops throughout the day - <strong>no prior knowledge of code is necessary</strong>. And we mean none. Some examples of the 101 intro classes we offer are: Ruby, APIs, Python, GitHub, html/CSS, and SQL. Mentoring sessions we offered previously were: Empowerment/imposter syndrome, open gov/open data, and lady mentoring session.</p>
 
-<p>Some examples of the 101 intro classes we offer are: Ruby, APIs, Python, GitHub, html/CSS, and SQL. Mentoring sessions we offered previously were: Empowerment/imposter syndrome, open gov/open data, and lady mentoring session.</p>
-
-<p><strong>Hackathon:</strong><br>
-This is a civic hackathon, and we usually work on projects from <a href="http://codefordc.org">Code for DC</a>, but you're welcome to bring anything.</p>
+<p><strong>Hackathon:</strong> This is a civic hackathon, and we usually work on projects from <a href="http://codefordc.org">Code for DC</a>, but you're welcome to bring anything and pitch it.</p>
 
 <h3>Questions? Ideas? Advice?</h3>
 <p>Leah Bannon is the lead organizer of this event. Please feel free to reach out via <a href="http://twitter.com/leahbannon">Twitter</a> with any questions or ideas, or you can check out her personal site at <a href="http://leah.io">Leah.io</a>.</p>
 
-<h3><a href="/donors">Donors: Support the Tech Lady Hackathon</a></h3>
+<p><strong><a href="/donors">Donors: Support the Tech Lady Hackathon</a></strong></p>
