--- a/lgbteeo.html
+++ b/lgbteeo.html
@@ -6,3 +6,9 @@ published: true
 <h3>LGBT Equal Employment: What's your policy?</h3>
 
 <p>Let's require some civil rights from employers and events we help promote.</p>
+
+<h4>Required:</h4>
+<ul>
+  <li>equal employment protections for LGBT employees</li>
+  <li>no benefits discrimination against LGBT employees, their partners, and their dependents</li>
+</ul>
