--- a/lgbteeo.html
+++ b/lgbteeo.html
@@ -12,3 +12,10 @@ published: true
   <li>equal employment protections for LGBT employees</li>
   <li>no benefits discrimination against LGBT employees, their partners, and their dependents</li>
 </ul>
+
+<h4>Additional information from the Human Rights Campaign's Corporate Equality Index</h4>
+<h5>1. Equal employment opportunity policy includes:
+<ul>
+  <li>a. Sexual orientation</li>
+  <li>b. Gender identity or expression</li>
+</ul>
