--- a/lgbteeo.html
+++ b/lgbteeo.html
@@ -14,7 +14,7 @@ published: true
 </ul>
 
 <h4>Additional information from the Human Rights Campaign's Corporate Equality Index</h4>
-<h5>1. Equal employment opportunity policy includes:
+<h5>1. Equal employment opportunity policy includes:</h5>
 <ul>
   <li>a. Sexual orientation</li>
   <li>b. Gender identity or expression</li>
