--- a/lgbteeo.html
+++ b/lgbteeo.html
@@ -13,9 +13,10 @@ published: true
   <li>no benefits discrimination against LGBT employees, their partners, and their dependents</li>
 </ul>
 
-<h4>Additional information from the Human Rights Campaign's Corporate Equality Index</h4>
-<h5>1. Equal employment opportunity policy includes:</h5>
+<h4>Interested in Learning More about LGBT Employment Equality?</h4>
+<p>This is additional information from the criteria that the Human Rights Campaign's uses to score their Corporate Equality Index</p>
+<h5>Equal employment opportunity policy includes:</h5>
 <ul>
-  <li>a. Sexual orientation</li>
-  <li>b. Gender identity or expression</li>
+  <li>Sexual orientation</li>
+  <li>Gender identity or expression</li>
 </ul>
