--- a/lgbteeo.html
+++ b/lgbteeo.html
@@ -15,7 +15,7 @@ published: true
 
 <h4>Interested in Learning More about LGBT Employment Equality?</h4>
 <p>This is additional information from the criteria that the Human Rights Campaign's uses to score their Corporate Equality Index</p>
-<h5>Equal employment opportunity policy includes:</h5>
+<p>1. Equal employment opportunity policy includes:</p>
 <ul>
   <li>Sexual orientation</li>
   <li>Gender identity or expression</li>
