Makes subpages work locally. Adds pretty permalinks. Organizes pages into pages folder.

--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -1,6 +1,7 @@
 ---
 layout: main
 published: true
+permalink: /feedback/
 ---
 
 <iframe src="https://docs.google.com/forms/d/1QOEI8_uXrwifmgcLeVqhBtP-lbmyIGgNj80UnQetSTE/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
