--- a/pages/index.html
+++ b/pages/index.html
@@ -1,10 +1,11 @@
 ---
 layout: main
 published: true
+permalink: /
 ---
 
 <h3>The next Tech Lady Hackathon + Training Day is in July.</h3> 
-<p><a href="/newsletter">Subscribe to the newsletter</a> to be the first to hear details (and learn about other DC tech lady events and training every month).</p>
+<p><a href="{{ site.baseurl }}/newsletter/">Subscribe to the newsletter</a> to be the first to hear details (and learn about other DC tech lady events and training every month).</p>
 
 <p>Coders, tech strategists, trainers, newbies, and ideas are welcome! Not sure what to expect/bring/do? <a href="https://github.com/leahbannon/old-leah-website/blob/master/_posts/2014-07-23-what-to-expect-at-a-hackathon.md">What to expect at a civic hackathon</a>.</p>
 
