Adds jekyll-redirect-from gem to redirect old urls to new pretty ones.

--- a/pages/codeofconduct.html
+++ b/pages/codeofconduct.html
@@ -2,6 +2,7 @@
 layout: main
 published: true
 permalink: /codeofconduct/
+redirect_from: /codeofconduct.html
 ---
 
 <p>We want everyone to have a good time at the TechLady Hackathon. To that end, if you have any questions, comments, or concerns, please do not hesitate to reach out to any of the TechLady teammates (or post questions on the FAQs). We're also adopting the following Guidelines for Awesomeness for all participants. </p>
