--- a/pages/donors.html
+++ b/pages/donors.html
@@ -2,6 +2,7 @@
 layout: main
 published: true
 permalink: /donors/
+redirect_from: /donors.html
 ---
 
 <h3>Interested in Supporting Tech Lady Hackathons?</h3>
