--- a/pages/lgbteeo.html
+++ b/pages/lgbteeo.html
@@ -2,6 +2,7 @@
 layout: main
 published: true
 permalink: /lgbteeo/
+redirect_from: /lgbteeo.html
 ---
 
 <h3>LGBT Equal Employment: What's your policy?</h3>
