--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: main
 published: true
 ---
 
-<h3>Tech Lady Hackathon + Training Day #3 is August 8</h3> 
+<h3>Tech Lady Hackathon + Training Day DC #3 is August 8</h3> 
 <p>It will be at <a href="https://www.google.com/maps/place/419+7th+St+NW,+Washington,+DC+20004">ImpactHub DC</a>, near all metro lines. <a href="/newsletter">Subscribe to the newsletter</a> to be the first to hear details (and learn about other DC tech lady events and training every month).</p>
 
 <p>Coders, tech strategists, trainers, newbies, and ideas are welcome! Not sure what to expect/bring/do? <a href="https://github.com/leahbannon/old-leah-website/blob/master/_posts/2014-07-23-what-to-expect-at-a-hackathon.md">What to expect at a civic hackathon</a>.</p>
