--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@ published: true
 
 <p><strong>Hackathon:</strong> This is a civic hackathon, and we usually work on projects from <a href="http://codefordc.org">Code for DC</a>, but you're welcome to bring anything and pitch it.</p>
 
+<p>Not sure what to expect? <a href="https://github.com/leahbannon/old-leah-website/blob/master/_posts/2014-07-23-what-to-expect-at-a-hackathon.md">Check out this post.</a></p>
+
 <h3>Questions? Ideas? Advice?</h3>
 <p>Leah Bannon is the lead organizer of this event. Please feel free to reach out via <a href="http://twitter.com/leahbannon">Twitter</a> with any questions or ideas, or you can check out her personal site at <a href="http://leah.io">Leah.io</a>.</p>
 
