--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ published: true
 ---
 
 <h3>Tech Lady Hackathon + Training Day DC #3 is August 8</h3> 
-<p>It will be at <a href="https://www.google.com/maps/place/419+7th+St+NW,+Washington,+DC+20004">ImpactHub DC</a>, near all metro lines. <a href="/newsletter">Subscribe to the newsletter</a> to be the first to hear details (and learn about other tech lady news, events, and training every month).</p>
+<p>It will be at <a href="https://www.google.com/maps/place/419+7th+St+NW,+Washington,+DC+20004">ImpactHub DC</a>, near all metro lines. <a href="https://techlady3.eventbrite.com">Register here</a> (waitlisting now) or join us at the <a href="https://techladyhackathonpre-party.splashthat.com/">pre-party at MapBox</a>. <em>The pre-party is open to all genders.</em></p>
 
 <h3>About</h3>
 
