--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: main
 published: true
 ---
 
-<h3>Tech Lady Hackathon + Training Day DC #3 is August 8</h3> 
+<h3>Tech Lady Hackathon + Training Day DC #3 is August 8</h3>
 <p>It will be at <a href="https://www.google.com/maps/place/419+7th+St+NW,+Washington,+DC+20004">ImpactHub DC</a>, near all metro lines. <a href="https://techlady3.eventbrite.com">Register here</a> (waitlisting now) or join us at the <a href="https://techladyhackathonpre-party.splashthat.com/">pre-party at MapBox</a>. <em>The pre-party is open to all genders.</em></p>
 
 <h3>About</h3>
@@ -22,5 +22,9 @@ published: true
 
 <h3>Questions? Ideas? Advice?</h3>
 <p>Leah Bannon is the lead organizer of this event. Please feel free to reach out via <a href="http://twitter.com/leahbannon">Twitter</a> with any questions or ideas, or you can check out her personal site at <a href="http://leah.io">Leah.io</a>.</p>
+
+<h3>2015 Sponsors</h3>
+<img src="/images/capitalone_logo.png"><br>
+<img src="/images/mapbox-logo-512.png"><br>
 
 <p><strong><a href="/donors">Donors: Support the Tech Lady Hackathon</a></strong></p>
