--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ published: true
 
 <h3>About</h3>
 
-<p>We started this to get more women into tech. Coders, tech strategists, trainers, newbies, nerds, and the curious are all welcome! At the Tech Lady Hackathon + Training Day, hundreds of women come together for a fun day of friendly, supportive learning, hacking, and networking.</p>
+<p>We started this to get more women into tech. Coders, tech strategists, newbies, nerds, and the curious are all welcome! Hundreds of women gather for a day of friendly learning and hacking.</p>
 
 <p>Coverage from previous hackathons:</p>
 <ul>
