--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@ published: true
 
 <h3>What to expect at the event</h3>
 
-<p>Here's what we offer at the Tech Lady Hackathon + Training Days:</p>
+<p><strong>Training:</strong> &nbsp;We offer training and mentoring workshops throughout the day - <strong>no prior knowledge of code is necessary</strong>. And we mean none. Some examples of classes are: Intro to... Ruby, APIs, Python, GitHub, html/CSS, and SQL.</p>
 
-<p><strong>Training:</strong> We offer training and mentoring workshops throughout the day - <strong>no prior knowledge of code is necessary</strong>. And we mean none. Some examples of classes are: Intro to... Ruby, APIs, Python, GitHub, html/CSS, and SQL.</p>
-
-<p><strong>Hackathon:</strong> This is a civic hackathon, and we usually work on projects from <a href="http://codefordc.org">Code for DC</a>, but you're welcome to bring anything and pitch it.</p>
+<p><strong>Hackathon:</strong> &nbsp;This is a civic hackathon, and we usually work on projects from <a href="http://codefordc.org">Code for DC</a>, but you're welcome to bring anything and pitch it.</p>
 
 <p>New to hackathons? Not sure what to expect, bring, or do? <a href="https://github.com/leahbannon/old-leah-website/blob/master/_posts/2014-07-23-what-to-expect-at-a-hackathon.md">Check out this post: What to expect at a hackathon.</a></p>
 
 <h3>Questions? Ideas? Advice?</h3>
-<p>Leah Bannon is the lead organizer of this event. Please feel free to reach out via <a href="http://twitter.com/leahbannon">Twitter</a> with any questions or ideas, or you can check out her personal site at <a href="http://leah.io">Leah.io</a>.</p>
-
+Reach out to lead organizer Leah Bannon via <a href="http://twitter.com/leahbannon">Twitter</a> with any questions or ideas, or you can check out her personal site at <a href="http://leah.io">Leah.io</a>.</p>
+<br>
+<br>
+<br>
 <h3>2015 Sponsors</h3>
 <img src="/images/capitalone_logo.png"><br>
 <img src="/images/mapbox-logo-512.png"><br>
