--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ published: true
 
 <h3>What to expect at the event</h3>
 
-<p><strong>Training:</strong> &nbsp;We offer training and mentoring workshops throughout the day - <strong>no prior knowledge of code is necessary</strong>. And we mean none. Some examples of classes are: Intro to... Ruby, APIs, Python, GitHub, html/CSS, and SQL.</p>
+<p><strong>Training:</strong> &nbsp;We offer training and mentoring workshops all day. No prior knowledge of code is necessary. Some examples of classes are: Intro to... APIs, Python, GitHub, html/CSS, and data viz.</p>
 
 <p><strong>Hackathon:</strong> &nbsp;This is a civic hackathon, and we usually work on projects from <a href="http://codefordc.org">Code for DC</a>, but you're welcome to bring anything and pitch it.</p>
 
