--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@ layout: main
 published: true
 ---
 
+<h3>Tech Lady Hackathon + Training Day DC #4 is October 22</h3>
+<p>Details to come.</p>
+
 <h3>About</h3>
 
 <p>We started this to get more women into tech. Coders, tech strategists, newbies, nerds, and the curious are all welcome! Hundreds of women gather for a day of friendly learning and hacking.</p>
@@ -26,12 +29,10 @@ published: true
 <p>New to hackathons? Not sure what to expect, bring, or do? <a href="https://github.com/leahbannon/old-leah-website/blob/master/_posts/2014-07-23-what-to-expect-at-a-hackathon.md">Check out this post: What to expect at a hackathon.</a></p>
 
 <h3>Questions? Ideas? Advice?</h3>
-Reach out to lead organizer Leah Bannon via <a href="http://twitter.com/leahbannon">Twitter</a> with any questions or ideas, or you can check out her personal site at <a href="http://leah.io">Leah.io</a>.</p>
+Reach out to founder Leah Bannon via <a href="http://twitter.com/leahbannon">Twitter</a> with any questions or ideas for Tech Lady Hackathon, or you can check out her personal site at <a href="http://leah.io">Leah.io</a>. Reach out to <a href="https://twitter.com/jessicagarson">Jessica Garson</a>, <a href="https://twitter.com/joymwhitt">Joy Whitt</a>, or <a href="https://twitter.com/datalensdc">Kate Rabinowitz</a> for questions or ideas about this year's hackathon.</p>
 <br>
 <br>
 <br>
-<h3>2015 Sponsors</h3>
-<img src="/images/capitalone_logo.png"><br>
-<img src="/images/mapbox-logo-512.png"><br>
+<h3>2016 Sponsors - to come.</h3>
 
 <p><strong><a href="/donors">Donors: Support the Tech Lady Hackathon</a></strong></p>
