--- a/donors.html
+++ b/donors.html
@@ -12,10 +12,11 @@ published: true
   </ul>
 <iframe src="https://docs.google.com/forms/d/1JvGicPN-V5WeLUfNGSVdtD4JlzYZSY-hD7wTgpYobj4/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
-<h3>December 2013 Tech Lady Hackathon #1 Donors</h3>
+<h3>Previous Tech Lady Hackathon Donors</h3>
 <p><a href="http://www.irex.org/"><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/irexlogo.jpg?raw=true"/></a></p>
 <p><a href="http://github.com"><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/Octocat.jpg?raw=true"</a></p>
 <p><a href="http://govtrack.us"><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/logo_hires.png?raw=true"/></a></p>
 <p><a href="http://mapbox.com"><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/mapbox-logo-512.png?raw=true"/></a></p>
 <p><a href="http://sunlightfoundation.com/"><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/SunlightFoundation-logo.png?raw=true"/></a></p>
 <p><a href="http://neworganizing.com/"><img src="https://github.com/leahbannon/hackathontrainingday/blob/gh-pages/images/noi_square_logo.jpg?raw=true"/></a></p>
+<p><a href="http://www.capitalone.com"><img src="https://github.com/leahbannon/techladyhackathon/raw/gh-pages/images/capitalone_logo.png?raw=true" width=50%></a></p>
