--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ published: true
 ---
 
 <h3>Tech Lady Hackathon + Training Day DC #4 is October 22</h3>
-<p>Details to come.</p>
+<p>It will be at <a href="https://www.google.com/maps/place/641+S+St+NW,+Washington,+DC+20001">iStrategyLabs</a>. Registration will open two weeks prior.</p> 
 
 <h3>About</h3>
 
@@ -22,9 +22,9 @@ published: true
 
 <h3>What to expect at the event</h3>
 
-<p><strong>Training:</strong> &nbsp;We offer training and mentoring workshops all day. No prior knowledge of code is necessary. Some examples of classes are: Intro to... APIs, Python, GitHub, html/CSS, and data viz.</p>
+<p><strong>Training:</strong> &nbsp;We offer training and mentoring workshops all day. No prior knowledge of code is necessary. <a href="/workshops">View this year's workshops.</a></p>
 
-<p><strong>Hackathon:</strong> &nbsp;This is a civic hackathon, and we usually work on projects from <a href="http://codefordc.org">Code for DC</a>, but you're welcome to bring anything and pitch it.</p>
+<p><strong>Hackathon:</strong> &nbsp;This is a civic hackathon, and we usually work on projects from community organizations like <a href="http://codefordc.org">Code for DC</a>, but you're welcome to bring anything and pitch it.</p>
 
 <p>New to hackathons? Not sure what to expect, bring, or do? <a href="https://github.com/leahbannon/old-leah-website/blob/master/_posts/2014-07-23-what-to-expect-at-a-hackathon.md">Check out this post: What to expect at a hackathon.</a></p>
 
