--- a/workshops.html
+++ b/workshops.html
@@ -43,7 +43,7 @@ published: true
 
 	<li>Intro to Data Visualization</li>
 		<ul style="list-style-type:none">
-			<li>TBD</li>
+			<li><a href="https://twitter.com/BFongData">Brittany Fong</a></li>
 		</ul>
 
 	<li>Everyday Activism</li>
