add sponsors, pre-party, update workshops

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ published: true
 ---
 
 <h3>Tech Lady Hackathon + Training Day DC #4 is October 22</h3>
-<p>It will be at <a href="https://www.google.com/maps/place/641+S+St+NW,+Washington,+DC+20001">iStrategyLabs</a>. Get tickets<a href="https://www.eventbrite.com/e/tech-lady-hackathon-4-registration-28305573733"> here.</a></p> 
+<p>It will be at <a href="https://www.google.com/maps/place/641+S+St+NW,+Washington,+DC+20001">iStrategyLabs</a>. Tickets are sold out, but you can join the waitlist<a href="https://www.eventbrite.com/e/tech-lady-hackathon-4-registration-28305573733"> here.</a> You can also join us for the <a href="https://www.eventbrite.com/e/tech-lady-hackathon-4-pre-party-registration-28453561368">pre-party.</a></p> 
 
 <h3>About</h3>
 
@@ -30,9 +30,19 @@ published: true
 
 <h3>Questions? Ideas? Advice?</h3>
 Reach out to founder Leah Bannon via <a href="http://twitter.com/leahbannon">Twitter</a> with any questions or ideas for Tech Lady Hackathon, or you can check out her personal site at <a href="http://leah.io">Leah.io</a>. Reach out to <a href="https://twitter.com/jessicagarson">Jessica Garson</a>, <a href="https://twitter.com/joymwhitt">Joy Whitt</a>, or <a href="https://twitter.com/datalensdc">Kate Rabinowitz</a> for questions or ideas about this year's hackathon.</p>
-<br>
-<br>
-<br>
-<h3>2016 Sponsors - to come.</h3>
 
-<p><strong><a href="/donors">Donors: Support the Tech Lady Hackathon</a></strong></p>
+<br>
+<h3>2016 Sponsors</h3>
+<img src="/images/bm-logo.png"><br>
+<img src="/images/civis-logo.jpg"><br>
+<img src="/images/ga-logo.jpg"><br>
+<img src="/images/isl-logo.jpg"><br>
+<img src="/images/mapbox16-logo.png"><br>
+<img src="/images/nyt-logo.jpg"><br>
+<img src="/images/optoro-logo.png"><br>
+<img src="/images/targetSmart-logo.png"><br>
+<img src="/images/thematic-logo.png"><br>
+<img src="/images/xometry-logo.png"><br>
+
+<!---<p><strong><a href="/donors">Donors: Support the Tech Lady Hackathon</a></strong></p>
+
