--- a/workshops.html
+++ b/workshops.html
@@ -91,9 +91,9 @@ published: true
 			<li><a href="https://twitter.com/superbhatt">Radhika Bhatt</a></li>
 		</ul>
 
-	<li>Fundamentals of Security in Programming</li>
+	<li>Intro to Security for Developers</li>
 		<ul style="list-style-type:none">
-			<li><a href="https://twitter.com/geekismylifesty">Nakeea Neischer</a></li>
+			<li><a href="https://twitter.com/AlexUlsh">Alexandra Ulsh</a></li>
 		</ul>
 
 	<li>Bridging the Gap: Becoming a Designer who Codes</li>
