--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ Reach out to founder Leah Bannon via <a href="http://twitter.com/leahbannon">Twi
 <img src="/images/optoro-logo.png"><br>
 <img src="/images/targetSmart-logo.png"><br>
 <img src="/images/thematic-logo.png"><br>
+<img src="/images/wit-logo.png"><br>
 <img src="/images/xometry-logo.png"><br>
 
 <!---<p><strong><a href="/donors">Donors: Support the Tech Lady Hackathon</a></strong></p>
