remove waitlist option

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ published: true
 ---
 
 <h3>Tech Lady Hackathon + Training Day DC #4 is October 22</h3>
-<p>It will be at <a href="https://www.google.com/maps/place/641+S+St+NW,+Washington,+DC+20001">iStrategyLabs</a>. Tickets are sold out, but you can join the waitlist<a href="https://www.eventbrite.com/e/tech-lady-hackathon-4-registration-28305573733"> here.</a> You can also join us for the <a href="https://www.eventbrite.com/e/tech-lady-hackathon-4-pre-party-registration-28453561368">pre-party.</a></p> 
+<p>It will be at <a href="https://www.google.com/maps/place/641+S+St+NW,+Washington,+DC+20001">iStrategyLabs</a>. Tickets are sold out.</a> You can still join us for the <a href="https://www.eventbrite.com/e/tech-lady-hackathon-4-pre-party-registration-28453561368">pre-party.</a></p> 
 
 <h3>About</h3>
 
